--- a/HackQuestion/.travis.yml
+++ b/HackQuestion/.travis.yml
@@ -1,6 +1,6 @@
 ﻿language: csharp
-solution: HackQuestion.sln
 mono: none
-dotnet: 2.1.400
+dotnet: 2.0.1
 script:
  - dotnet restore
+ - dotnet build ./HackQuestion/
