Fisrt Layout Inicial

--- a/HackQuestion/HackQuestion.csproj
+++ b/HackQuestion/HackQuestion.csproj
@@ -8,8 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.OWIN" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" PrivateAssets="All" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Libraries\Core\" />
+    <Folder Include="Libraries\Services\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
