--- a/HackQuestion/appsettings.json
+++ b/HackQuestion/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HackQuestion-29F44AB2-3EFA-433F-A1F3-2A0A753B2A4F;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "HackConnection": "Server=localhost;User Id=root;Password=Jymkatana_6985;Database=hackquestion"
   },
   "Logging": {
     "IncludeScopes": false,
