--- a/HackQuestion/appsettings.json
+++ b/HackQuestion/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "HackConnection": ""
+    "HackConnection": "Server=MYSQL5018.site4now.net;Database=db_9d0188_hack;Uid=9d0188_hack;Pwd=Jymkatana_6985",
+    "HackConnections": "Server=localhost;User Id=root;Password=Jymkatana_6985;Database=hackquestion"
   },
   "Logging": {
     "IncludeScopes": false,
