Add file to record, add secret keys!

--- a/HackQuestion/appsettings.json
+++ b/HackQuestion/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "HackConnection": "Server=*****;Database=*****;Uid=*****;Pwd=******"
+    "HackConnection": "<user secret>"
   },
   "Logging": {
     "IncludeScopes": false,
