--- a/HackQuestion/appsettings.json
+++ b/HackQuestion/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "HackConnection": "<server>"
+    "HackConnection": ""
   },
   "Logging": {
     "IncludeScopes": false,
