--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ bld/
 msbuild.log
 msbuild.err
 msbuild.wrn
+src/obj/Debug/netcoreapp2.0/HackQuestion.PrecompiledViews.dll
+src/obj/Debug/netcoreapp2.0/HackQuestion.PrecompiledViews.pdb
